--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
   <body>
     <div class="login_form" id="login_form">
       <div class="left">
-        <img src="images/shoes.png" alt="Shoes Logo" />
+        <img src="images/shoes1.png" alt="Shoes Logo" />
       </div>
       <div class="right">
         <h1>Đăng nhập!</h1>
