--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
       <div class="left">
         <img src="images/shoes1.png" alt="Shoes Logo" />
       </div>
-      <h1>Đăng nhập!</h1>
+      <h1>Đăng nhập!>>>>>>>>>>>>>>>></h1>
       <div class="right">
         <h1>Đăng nhập!</h1>
         <p id="error" style="color: red"></p>
